fix(cta.scss): add `overflow: hidden` to `.cta-content` to prevent the border radius from not displaying

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -28,6 +28,7 @@
         background: var(--modal-content-bg);
         padding: var(--modal-content-p);
         border-radius: var(--modal-content-radius);
+        overflow: hidden;
         max-width: var(--modal-content-max-w);
         position: relative;
         color: var(--modal-content-clr);
